--- a/documenti/documentazione/latex/md_prova.tex
+++ b/documenti/documentazione/latex/md_prova.tex
@@ -8,4 +8,4 @@
 
 \subparagraph*{Intestazione 6}
 
-questo file serve a {\itshape {\bfseries{Simone Fabrizi}}} 
+questo file serve a {\itshape {\bfseries Simone Fabrizi}} 
