--- a/documenti/documentazione/latex/refman.tex
+++ b/documenti/documentazione/latex/refman.tex
@@ -159,6 +159,10 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
+\chapter{Intestazione 1}
+\label{md_prova}
+\Hypertarget{md_prova}
+\input{md_prova}
 %--- End generated contents ---
 
 % Index
