relazione piffari in markdown

--- a/documenti/documentazione/latex/refman.tex
+++ b/documenti/documentazione/latex/refman.tex
@@ -163,6 +163,10 @@
 \label{md_prova}
 \Hypertarget{md_prova}
 \input{md_prova}
+\chapter{Relazione Piffari}
+\label{md_relazione_piffari}
+\Hypertarget{md_relazione_piffari}
+\input{md_relazione_piffari}
 %--- End generated contents ---
 
 % Index
