--- a/documenti/documentazione/latex/refman.tex
+++ b/documenti/documentazione/latex/refman.tex
@@ -139,24 +139,57 @@
 
 %--- Begin generated contents ---
 \chapter{Intestazione 1}
-\label{md_prova}
-\Hypertarget{md_prova}
-\input{md_prova}
-<<<<<<< HEAD
+\label{md_documenti_documentazione_prova}
+\Hypertarget{md_documenti_documentazione_prova}
+\input{md_documenti_documentazione_prova}
 \chapter{relazione\+\_\+fabrizi}
-\label{md_relazione_fabrizi}
-\Hypertarget{md_relazione_fabrizi}
-\input{md_relazione_fabrizi}
+\label{md_documenti_documentazione_relazione_fabrizi}
+\Hypertarget{md_documenti_documentazione_relazione_fabrizi}
+\input{md_documenti_documentazione_relazione_fabrizi}
 \chapter{relazione\+\_\+marchesano}
-\label{md_relazione_marchesano}
-\Hypertarget{md_relazione_marchesano}
-\input{md_relazione_marchesano}
-=======
+\label{md_documenti_documentazione_relazione_marchesano}
+\Hypertarget{md_documenti_documentazione_relazione_marchesano}
+\input{md_documenti_documentazione_relazione_marchesano}
 \chapter{Relazione Piffari}
-\label{md_relazione_piffari}
-\Hypertarget{md_relazione_piffari}
-\input{md_relazione_piffari}
->>>>>>> bac24d7a0e2fdb74d80b806f0a56589b4fdf50e2
+\label{md_documenti_documentazione_relazione_piffari}
+\Hypertarget{md_documenti_documentazione_relazione_piffari}
+\input{md_documenti_documentazione_relazione_piffari}
+\chapter{P\+I\+C\+C\+H\+IO}
+\label{md_documenti_PICCHIO}
+\Hypertarget{md_documenti_PICCHIO}
+\input{md_documenti_PICCHIO}
+\chapter{R\+E\+A\+D\+ME}
+\label{md_manuali_sito_css_README}
+\Hypertarget{md_manuali_sito_css_README}
+\input{md_manuali_sito_css_README}
+\chapter{R\+E\+A\+D\+ME}
+\label{md_manuali_sito_etc_README}
+\Hypertarget{md_manuali_sito_etc_README}
+\input{md_manuali_sito_etc_README}
+\chapter{R\+E\+A\+D\+ME}
+\label{md_manuali_sito_images_README}
+\Hypertarget{md_manuali_sito_images_README}
+\input{md_manuali_sito_images_README}
+\chapter{R\+E\+A\+D\+ME}
+\label{md_manuali_sito_js_README}
+\Hypertarget{md_manuali_sito_js_README}
+\input{md_manuali_sito_js_README}
+\chapter{R\+E\+A\+D\+ME}
+\label{md_manuali_sito_lib_README}
+\Hypertarget{md_manuali_sito_lib_README}
+\input{md_manuali_sito_lib_README}
+\chapter{Sito internet per documentazione e manuali.}
+\label{md_manuali_sito_README}
+\Hypertarget{md_manuali_sito_README}
+\input{md_manuali_sito_README}
+\chapter{R\+E\+A\+D\+ME}
+\label{md_manuali_sito_sub_README}
+\Hypertarget{md_manuali_sito_sub_README}
+\input{md_manuali_sito_sub_README}
+\chapter{Materiale per la classe 5bit AS 2018-\/2019 (I. Manzetti -\/ Aosta)}
+\label{md_README}
+\Hypertarget{md_README}
+\input{md_README}
 %--- End generated contents ---
 
 % Index
