--- a/documenti/documentazione/latex/dir_52866fa944af86679fba61fd56a91630.tex
+++ b/documenti/documentazione/latex/dir_52866fa944af86679fba61fd56a91630.tex
@@ -2,4 +2,8 @@
 \label{dir_52866fa944af86679fba61fd56a91630}\index{manuali/sito Directory Reference@{manuali/sito Directory Reference}}
 \subsection*{Directories}
 \begin{DoxyCompactItemize}
+\item 
+directory \hyperlink{dir_768d14d07923a2447e6c5deb24f98134}{etc}
+\item 
+directory \hyperlink{dir_1a7cc373726d21cca10dddef01231bb6}{lib}
 \end{DoxyCompactItemize}
