--- a/documenti/documentazione/latex/dir_5cfd3308e1928a0d79acb4054f2e58aa.tex
+++ b/documenti/documentazione/latex/dir_5cfd3308e1928a0d79acb4054f2e58aa.tex
@@ -1,2 +1,7 @@
 \hypertarget{dir_5cfd3308e1928a0d79acb4054f2e58aa}{}\section{manuali Directory Reference}
 \label{dir_5cfd3308e1928a0d79acb4054f2e58aa}\index{manuali Directory Reference@{manuali Directory Reference}}
+\subsection*{Directories}
+\begin{DoxyCompactItemize}
+\item 
+directory \hyperlink{dir_52866fa944af86679fba61fd56a91630}{sito}
+\end{DoxyCompactItemize}
