--- a/documenti/documentazione/latex/refman.tex
+++ b/documenti/documentazione/latex/refman.tex
@@ -190,6 +190,24 @@
 \label{md_README}
 \Hypertarget{md_README}
 \input{md_README}
+\chapter{File Index}
+\input{files}
+\chapter{File Documentation}
+\input{prova_8md}
+\input{relazione__fabrizi_8md}
+\input{relazione__marchesano_8md}
+\input{relazione__piffari_8md}
+\input{PICCHIO_8md}
+\input{manuali_2sito_2css_2README_8md}
+\input{manuali_2sito_2etc_2README_8md}
+\input{manuali_2sito_2images_2README_8md}
+\input{manuali_2sito_2js_2README_8md}
+\input{manuali_2sito_2lib_2README_8md}
+\input{manuali_2sito_2README_8md}
+\input{manuali_2sito_2sub_2README_8md}
+\input{README_8md}
+\input{config-template_8php}
+\input{html_8php}
 %--- End generated contents ---
 
 % Index
