--- a/documenti/documentazione/latex/dir_768d14d07923a2447e6c5deb24f98134.tex
+++ b/documenti/documentazione/latex/dir_768d14d07923a2447e6c5deb24f98134.tex
@@ -1,2 +1,7 @@
 \hypertarget{dir_768d14d07923a2447e6c5deb24f98134}{}\section{manuali/sito/etc Directory Reference}
 \label{dir_768d14d07923a2447e6c5deb24f98134}\index{manuali/sito/etc Directory Reference@{manuali/sito/etc Directory Reference}}
+\subsection*{Files}
+\begin{DoxyCompactItemize}
+\item 
+file \hyperlink{config-template_8php}{config-\/template.\+php}
+\end{DoxyCompactItemize}
