--- a/documenti/documentazione/latex/refman.tex
+++ b/documenti/documentazione/latex/refman.tex
@@ -138,25 +138,10 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
-\chapter{Intestazione 1}
-\label{md_prova}
-\Hypertarget{md_prova}
-\input{md_prova}
-<<<<<<< HEAD
-\chapter{relazione\+\_\+fabrizi}
-\label{md_relazione_fabrizi}
-\Hypertarget{md_relazione_fabrizi}
-\input{md_relazione_fabrizi}
-\chapter{relazione\+\_\+marchesano}
-\label{md_relazione_marchesano}
-\Hypertarget{md_relazione_marchesano}
-\input{md_relazione_marchesano}
-=======
-\chapter{Relazione Piffari}
-\label{md_relazione_piffari}
-\Hypertarget{md_relazione_piffari}
-\input{md_relazione_piffari}
->>>>>>> bac24d7a0e2fdb74d80b806f0a56589b4fdf50e2
+\chapter{Materiale per la classe 5bit AS 2018-\/2019 (I. Manzetti -\/ Aosta)}
+\label{md_README}
+\Hypertarget{md_README}
+\input{md_README}
 %--- End generated contents ---
 
 % Index
